--- a/app/views/99_cfr.html
+++ b/app/views/99_cfr.html
@@ -15,8 +15,38 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">CFR (Cost and Freight)</h1>
-            <p>The seller pays the costs and freight for transporting the goods to the named destination port. However, the risk is transferred to the buyer once the goods have been loaded onto the ship. According to the ICC, this term should only be used for conventional sea freight. It isn’t appropriate for containerised cargo, which is better covered by CPT (Carriage Paid To).
-            </p>
+
+            <p>Under CFR terms (short for “Cost and Freight”), the seller is required to clear the goods for export, deliver them onboard the ship at the port of departure, and pay for transport of the goods to the named port of destination.&nbsp;</p>
+
+            <p>The risk passes from seller to buyer when the seller delivers the goods onboard the ship.&nbsp;</p>
+
+            <p>The buyer is responsible for paying all additional transport costs from the port of destination, including import clearance and duties.&nbsp;</p>
+
+            <p>Only use CFR for ocean or inland waterway transport.&nbsp;</p>
+
+            <p>If the freight is containerized and to be delivered to a terminal only, use <a href="/99_cpt">CPT</a> instead.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage and delivery</li>
+                <li>Loading charges</li>
+                <li>Delivery at named port of destination</li>
+                <li>Proof of delivery</li>
+                <li>Cost of pre-shipment inspection</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations</h2>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Payment for goods as specified in sales contract</li>
+                <li>Risk starting with onboard delivery</li>
+                <li>Discharge and onward carriage</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of pre-shipment inspection (for import clearance)</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
