--- a/app/views/99_cip.html
+++ b/app/views/99_cip.html
@@ -15,7 +15,36 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">CIP (Carrier and Insurance Paid)</h1>
-            <p>The seller pays for the carriage and insurance to the named destination port, clears the goods for export at the port or airport of loading, and arranges insurance to a minimum of “Clause A”. CIP can be used for any means of transport, but the risk passes to the buyer when the goods are handed to the first carrier.</p>
+            <p>In Carriage and Insurance Paid To (CIP), the seller assumes all risk until the goods are delivered to the first carrier at the place of shipment - not the place of destination. Once the goods are delivered to the first carrier, the buyer is responsible for all risks.</p>
+
+            <p>However, the seller is responsible for the cost of carriage as well as all-risk insurance coverage until the freight reaches the named place of destination.</p>
+
+            <p>A carrier is any person or company who undertakes the carriage of goods, such as a shipping line, airline, trucking company, railway or freight forwarder.</p>
+
+            <p>In multimodal shipments, the place of shipment is the first carrier used.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage and delivery</li>
+                <li>Loading charges</li>
+                <li>Cost of delivery at named place of destination</li>
+                <li>Proof of delivery</li>
+                <li>Cost of pre-shipment inspection</li>
+                <li>All-risk insurance coverage</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations
+            </h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Payment for goods as specified in sales contract</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of import clearance pre-shipment inspection</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
