--- a/app/views/99_cpt.html
+++ b/app/views/99_cpt.html
@@ -15,9 +15,36 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">CPT (Carriage Paid To)</h1>
-            <p>The seller is responsible for loading the goods on the vessel chosen by the buyer, clearing the goods for export at the port/airport of loading, and paying freight costs to the named destination. The risk passes to the buyer once the goods are loaded on the first carrier.
-                CPT can be used for any means of transport and should replace CFR when shipping containerised cargo.
-            </p>
+            <p>Carriage Paid To (CPT) rules require the seller to clear the goods and arrange carriage (by one or more transport modes) to the named place of destination. The seller does not need to obtain or pay for insurance.</p>
+
+            <p>A carrier is any person or company who undertakes the carriage of the goods, such as a shipping line, airline, trucking company, railway or freight forwarder.</p>
+
+            <p>In multimodal  shipments, the place of shipment is the first carrier used.</p>
+
+            <p>Under CPT rules, the seller’s risk ends, and the buyer’s risk begins, when the first carrier receives the goods from the seller. However, the buyer is only responsible for additional costs after the goods arrive at the final destination.</p>
+
+            <p>CPT is often used in air freight, containerized ocean freight, small parcel shipments and “ro-ro” shipments of motor vehicles.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage and delivery</li>
+                <li>Loading charges</li>
+                <li>Cost of delivery at named place of destination</li>
+                <li>Proof of delivery</li>
+                <li>Cost of pre-shipment inspection</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Payment for goods as specified in sales contract</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of import clearance pre-shipment inspection</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
