--- a/app/views/99_dap.html
+++ b/app/views/99_dap.html
@@ -15,12 +15,39 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">DAP (Delivered at Place) Arrival Point</h1>
-            <h2 class="govuk-heading-m">Arrival Point</h2>
-            <p>The buyer is responsible for import customs clearance plus any local taxes and import duties, with the seller responsible for arranging and delivering the goods to a named destination, which might be a port or airport in the buyer’s country. However, the seller is not responsible for unloading the goods at the named place.</p>
+            <p>Under the Delivered At Place (DAP) Incoterms rules, the seller is responsible for delivery of the goods, ready for unloading, at the named place of destination.</p>
 
-            <h2 class="govuk-heading-m">The buyer’s Premises</h2>
-            <p>The seller bears the cost, risk and responsibility for goods until they arrive at the buyer’s premises in the country of destination, but not unloading the goods from the delivering transport. The buyer is responsible for import customs clearance and the payment of import duties/taxes, with the seller responsible for export clearance. The seller has the option to revert to DAP Arrival Point if import formalities are not completed in a reasonable time.
-            </p>
+            <p>The seller assumes all risks involved up to unloading. Unloading is at the buyer’s risk and cost.</p>
+
+            <p>DAP can apply to any - and more than one - mode of transport. The buyer and seller should specify and agree upon the precise unloading spot at the named place of destination.</p>
+
+            <p>Unless otherwise agreed between both parties, the seller cannot request renumeration for unloading costs incurred under the contract of carriage.</p>
+
+            <p>DAP rules require the seller to clear goods for export, where applicable, without any obligation to clear the goods for import, pay import duty or carry out import customs formalities.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage and delivery</li>
+                <li>Loading charges</li>
+                <li>Cost of pre-shipment inspection</li>
+                <li>Main carriage</li>
+                <li>Delivery to named place of destination</li>
+                <li>Proof of delivery</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Payment for goods as specified in sales contract</li>
+                <li>Unloading from arriving means of transportation</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of import clearance pre-shipment inspection</li>
+                <li>Onward carriage and delivery to buyer (depending on named place)</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
