--- a/app/views/99_ddp.html
+++ b/app/views/99_ddp.html
@@ -15,8 +15,37 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">DDP (Delivered Duty Paid)</h1>
-            <p>The seller is responsible for all the costs and risks associated with delivering the goods to the named destination in the country of the buyer, including import duties and taxes. The buyer’s only responsibility is unloading the goods. While Ex Works (EWX) represents the minimum obligation for the seller, DDP represents the maximum obligation for the seller. It’s worth noting that DDP trade is not always possible in certain countries.
-            </p>
+            <p>Under the Delivered Duty Paid (DDP) Incoterm rules, the seller assumes all responsibilities and costs for delivering the goods to the named place of destination. The seller must pay both export and import formalities, fees, duties and taxes.</p>
+
+            <p>The seller is not obligated to insure the goods for pre-carriage or main carriage.</p>
+
+            <p>The buyer is free of any risk or cost until the goods are unloaded from the vehicle at the named place of destination, usually the buyer’s place of business.</p>
+
+            <p>DDP is the only Incoterms rule that places responsibility for import clearance and payment of taxes and/or import duty on the seller.</p>
+
+            <p>These last requirements can be problematic for the seller. In countries with complex or bureaucratic import clearance procedures a seller with local knowledge may prefer to take on these responsibilities.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage and delivery</li>
+                <li>Loading charges</li>
+                <li>Main carriage</li>
+                <li>Proof of delivery</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of all inspections</li>
+                <li>Delivery to named place of destination</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Payment for goods as specified in sales contract</li>
+                <li>Assist seller in obtaining any documents or information necessary for export or import clearance formalities</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
