--- a/app/views/99_dpu.html
+++ b/app/views/99_dpu.html
@@ -15,9 +15,35 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">DPU (Delivered at Place Unloaded)</h1>
-            <p>Under this term, the seller bears the cost, risk and responsibility until the goods are unloaded at a named place. The named place can be an air cargo depot, quay, container port, rail port, warehouse or any agreed place between both parties. This is the only term that requires the seller to unload the goods, but customs clearance is still the responsibility of the buyer.</p>
-            <p>This term was previously named Delivered at Terminal (DAT), but was changed for Incoterms 2020 as buyers and sellers often want goods delivered somewhere other than a terminal.
-            </p>
+            <p>Delivered at Place Unloaded (DPU) (formerly referred to as DAT for “Delivered at Terminal”) requires the seller to deliver the goods at the disposal of the buyer after they’ve been unloaded from the arriving means of transport.</p>
+
+            <p>DPU is the only Incoterms rule that requires the seller to unload goods at the place of destination.</p>
+
+            <p>DPU can apply to any - and more than one - mode of transport. The buyer and seller should specify and agree upon a named place of destination.</p>
+
+            <p>DPU requires the seller to clear goods for export, where applicable, without any obligation to clear the goods for import, pay import duty or carry out import customs formalities.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage and delivery</li>
+                <li>Loading charges</li>
+                <li>Main carriage</li>
+                <li>Delivery at named place of destination</li>
+                <li>Unloading charges</li>
+                <li>Proof of delivery</li>
+                <li>Cost of pre-shipment inspection</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations</h2>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Payment for goods as specified in sales contract</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of import clearance pre-shipment inspection</li>
+                <li>Onward carriage and delivery to buyer (depending upon named place)</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
