--- a/app/views/99_exw.html
+++ b/app/views/99_exw.html
@@ -15,9 +15,35 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">EXW (Ex Works)</h1>
-            <p>The seller is only responsible for making the goods ready for collection at a named premises, which could be their warehouse or another named location. The buyer is then responsible for the shipment from that point, including loading the goods, export documentation and clearance, payment of transportation costs, and movement of goods to the final destination.</p>
-            <p>The ICC has recommended that EXW only be used for domestic trade as it is difficult for an overseas buyer to complete export documentation in the country of supply. For overseas trade, FCA (Free Carrier) Seller’s Premises should be used instead of EXW.
-            </p>
+            <p>EXW, short for “Ex Works,” places most responsibility with the buyer. The seller is expected to have the goods ready for collection at the agreed place of delivery (commonly the seller’s factory, mill, plant or warehouse). The buyer is accountable for all subsequent costs and risk, including all export procedures, starting with loading the goods onto a transport vehicle at the seller’s premises.</p>
+
+            <p>In practice, it is not uncommon for a seller to load goods onto the vehicle instead, at the risk and cost of the buyer - or even free of charge. However, such an agreement must be made within the contract of sales.</p>
+
+            <p>If the buyer cannot handle the export processes and procedures, use <a href="/99_fca">FCA</a> instead of EXW shipping.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Place goods at buyer’s disposal at the named place on the agreed upon date</li>
+                <li>Notice to the buyer to enable delivery</li>
+                <li>Export packaging and marking</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Pay the price of the goods as stated in sales contract</li>
+                <li>Provide seller with evidence of having taken delivery</li>
+                <li>Loading at seller’s location (unless otherwise agreed upon)</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage to terminal</li>
+                <li>Loading charges</li>
+                <li>Main carriage</li>
+                <li>Discharge and onward carriage</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of pre-shipment inspection</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
