--- a/app/views/99_fas.html
+++ b/app/views/99_fas.html
@@ -15,10 +15,37 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">FAS (Free Alongside Ship)</h1>
-            <p>The seller is responsible for placing the goods to be exported alongside the ship at the named port, as well as arranging export documentation and clearing export customs.</p>
 
-            <p>The risk for the loss or damage of those goods then passes to the buyer, who also bears all of the costs from that moment on. This Incoterm should apply to conventional sea freight only, not containerised cargo.</p>
+            <p>In the Incoterms rules for FAS (short for “Free Alongside Ship”), the seller clears goods for export and places them alongside the vessel at the named port of departure. The named port of departure location can be a loading dock or a barge, but not a container terminal.</p>
 
+            <p>The buyer is responsible for loading the freight onto the vessel, as well as handling local carriage, discharge, import formalities and duties and onward carriage to the final destination.</p>
+
+            <p>FAS only applies to ocean or inland waterway transport. It is popular with bulk cargo, such as oil or grain.</p>
+
+            <p>For containerized shipments delivered only to a terminal, use <a href="/99_fca">FCA</a> instead.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage to terminal</li>
+                <li>Delivery alongside vessel at port of shipment</li>
+                <li>Proof of delivery</li>
+                <li>Cost of pre-shipment inspection</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Pay the price of the goods as provided in the sales contract</li>
+                <li>Loading charges</li>
+                <li>Main carriage</li>
+                <li>Discharge and onward carriage</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of pre-shipment inspection (for import clearance)</li>
+            </ul>
             {{ govukButton({
                 text: "Start again",
                 href: "/mode_of_transport"
