--- a/app/views/99_fca.html
+++ b/app/views/99_fca.html
@@ -17,10 +17,35 @@
             <h1 class="govuk-heading-xl">FCA (Free Carrier)</h1>
 
             <h2 class="govuk-heading-m">The seller’s Premises</h2>
-            <p>As outlined above, this term should be used instead of EXW (Ex Works), which is widely misused for exports. Under this term, the seller bears all risks and costs up to and including loading the goods onto the vehicle at their premises. The seller also has an obligation to arrange export documentation and clear export customs. If used for ocean freight, the seller can obtain a bill of lading.</p>
+            <p>Under the shipping terms for the FCA Incoterms (short for “Free Carrier”), the seller is responsible for export clearance and delivery of goods to the carrier at the named place of delivery.</p>
 
-            <h2 class="govuk-heading-m">Named Place</h2>
-            <p>The seller pays the transport costs within their own country up to unloading at a named place, while also having responsibility for export documentation and customs procedures. A bill of lading can be obtained by the seller for ocean freight. This term can be used for all modes of transport, and the ICC recommends that it replaces FOB (Free on Board) when goods are not being moved by conventional sea freight.</p>
+            <p>Unless otherwise agreed upon, the seller is only responsible for loading the goods if the seller’s place of business is the named place of delivery.</p>
+
+            <p>A carrier is any person or company who undertakes the carriage, such as a shipping line, airline, trucking company, railway or freight forwarder.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage to terminal</li>
+                <li>Delivery to named place of delivery</li>
+                <li>Cost of pre-shipment inspection</li>
+                <li>Proof of delivery</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Payment for goods at price agreed upon in sales contract</li>
+                <li>Unloading from arriving means of transportation</li>
+                <li>Loading charges</li>
+                <li>Main carriage</li>
+                <li>Discharge and onward carriage</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of pre-shipment inspection (for import clearance)</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
