--- a/app/views/99_fob.html
+++ b/app/views/99_fob.html
@@ -15,8 +15,37 @@
         <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">Incoterms selector</span>
             <h1 class="govuk-heading-xl">FOB (Free on Board)</h1>
-            <p>The seller is responsible for loading the goods on board the vessel that has been nominated by the buyer, and also bears responsibility for export and customs duties. Once the goods are on board the ship, the cost and risk for the goods are divided between the two parties. The ICC advises that FOB should only be used for conventional sea freight, with FCA Named Place used for all other modes of transport, including containerised sea freight.
-            </p>
+            <p>Under the terms of FOB (short for “Free on Board”), the seller clears the goods for export and ensures they are delivered to and loaded onto the vessel for transport at the named port of departure.</p>
+
+            <p>The buyer takes over risk and costs, including import clearance and duties, as soon as the goods are loaded onto the transport vessel at the port of departure.</p>
+
+            <p>FOB only applies to ocean or inland waterway transport. As such, the named place is always a port. It does not apply if the main carriage is via air, ground or rail.</p>
+
+            <p>This term is commonly used for bulk cargo (such as oil or grain) or freight from Asia.</p>
+
+            <h2 class="govuk-heading-m">Seller’s Obligations</h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Goods, commercial invoice and documentation</li>
+                <li>Export packaging and marking</li>
+                <li>Export licenses and customs formalities</li>
+                <li>Pre-carriage and delivery</li>
+                <li>Loading charges</li>
+                <li>Delivery onboard vessel at named port of shipment</li>
+                <li>Proof of delivery</li>
+                <li>Cost of pre-shipment inspection</li>
+            </ul>
+
+            <h2 class="govuk-heading-m">Buyer’s Obligations
+            </h2>
+
+            <ul class="govuk-list govuk-list--bullet">
+                <li>Payment for goods as specified in sales contract</li>
+                <li>Main carriage</li>
+                <li>Discharge and onward carriage</li>
+                <li>Import formalities and duties</li>
+                <li>Cost of pre-shipment inspection (for import clearance)</li>
+            </ul>
 
             {{ govukButton({
                 text: "Start again",
